--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start": "node ./multi.js",
     "test": "node ./index.js"
   },
   "dependencies": {
